@@ -554,11 +554,15 @@ representing an algebraic integer), returns the \kbd{ZM} giving the
 multiplication table by $x$. Shallow function (the first column of the result
 points to the same data as $x$).
 
+\fun{GEN}{zk_inv}{GEN nf, GEN x} given a \kbd{ZC} $x$ (implicitly
+representing an algebraic integer), returns the \kbd{QC} giving the
+inverse $x^{-1}$. Return \kbd{NULL} if $x$ is $0$.
+Not memory clean but safe for \kbd{gerepileupto}.
+
 \fun{GEN}{zk_scalar_or_multable}{GEN nf, GEN x} given a \typ{INT} or \kbd{ZC}
 $x$, returns a \typ{INT} equal to $x$ if the latter is a scalar
 (\typ{INT} or \kbd{ZV\_isscalar}$(x)$ is 1) and
 \kbd{zk\_multable}$(\var{nf},x)$ otherwise. Shallow function.
-
 
 The following routines implement multiplication in a commutative $R$-algebra,
 generated by $(e_1 = 1,\dots, e_n)$, and given by a multiplication table $M$:
