@@ -132,6 +132,27 @@
 [0 0 1/2]
 
 
+[1 0 0]
+
+[0 1 0]
+
+[0 0 1]
+
+
+[1/2   0   0]
+
+[  0 1/2   0]
+
+[  0   0 1/2]
+
+
+[1 0 0]
+
+[0 1 0]
+
+[0 0 1]
+
+
 [1   0   0]
 
 [0 1/2   0]
@@ -186,4 +207,4 @@
 []
   *** nfinit: Warning: non-monic polynomial. Result of the form [nf,c].
 [[2, [0, 1]~, 2, 1, [0, -2; 1, 0]]]
-Total time spent: 16
+Total time spent: 19
