@@ -16,6 +16,7 @@ Done for version 2.8.1 (released ??/??/2016):
     7- [libpari] get_arith_Z, get_arith_ZZM
     8- [libpari] Mod2, Mod4, Mod8, Mod16, Mod32, Mod64, umodi2n
     9- [libpari] logint, logintall
+   10- [libpari] zk_inv
 
   Changed
     1- remove useless flag in idealappr: directly allow factorization
@@ -28,6 +29,8 @@ Done for version 2.8.1 (released ??/??/2016):
        nfkermodpr, nfsolvemodpr are obsolete. Use nfmodpr, work in the finite
        field, then lift back using nfmodprlift.
     5- split off historical refcard in submodules basic, ell, lfun, mf, nf
+    6- rewrite nfeltinv / nfeltdiv (use mult. table rather than polmod
+       representation)
 
 Done for version 2.8.0 (released 12/08/2016):
 
